Use Files.writeString() and Files.readString() where possible
See gh-31459